Cannot style ::selection for a flex container https://bugs.webkit.org/show_bug.cgi?id=209822

Patch by Tyler Wilcock <twilco.o@protonmail.com> on 2020-05-22
Reviewed by Antti Koivisto.

Source/WebCore:

When needing to query for pseudostyles, RenderText used to unconditionally check the parent's pseudostyles.  The parent of
RenderText objects is often an anonymous box, depending on the presence of siblings, `display` type, etc.  This is problematic
as pseudostyles are associated with an element of the DOM, meaning RenderText elements would often fail to find any pseudostyle
thanks to their anonymous parent.

This patch changes RenderText to traverse its tree of ancestry upwards until it finds a non-anonymous ancestor and gets those pseudostyles,
rather than unconditionally trying to get pseudostyles from its direct parent.

Blink does something similar when retrieving pseudostyles:

https://github.com/chromium/chromium/blob/793cb59c18334f8b506863192bf630776da0f4d2/third_party/blink/renderer/core/paint/selection_painting_utils.cc#L54

Tests: editing/selection/selection-display-block-sibling.html
       editing/selection/selection-display-flex.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::firstNonAnonymousAncestor const):
* rendering/RenderObject.h:
* rendering/RenderText.h:
(WebCore::RenderText::getCachedPseudoStyle const): getCachedPseudoStyle from first non-anonymous ancestor, rather than only checking the direct parent.
(WebCore::RenderText::selectionBackgroundColor const): Retrieve selectionBackgroundColor from first non-anonymous ancestor rather than only checking the direct parent.
(WebCore::RenderText::selectionForegroundColor const): Retrieve selectionForegroundColor from first non-anonymous ancestor rather than only checking the direct parent.
(WebCore::RenderText::selectionEmphasisMarkColor const): Retrieve selectionEmphasisMarkColor from first non-anonymous ancestor rather than only checking the direct parent.
(WebCore::RenderText::selectionPseudoStyle const): Retrieve selectionPseudoStyle from first non-anonymous ancestor rather than only checking the direct parent.

LayoutTests:

Add tests verifying ::selection pseudoelement styling is properly applied on direct text-children of a `display: flex;` div and on
direct text-children of a `display: block` div with siblings.

* editing/selection/selection-display-block-sibling.html: Added.
* editing/selection/selection-display-flex.html: Added.
* platform/gtk/editing/selection/selection-display-block-sibling-expected.png: Added.
* platform/gtk/editing/selection/selection-display-block-sibling-expected.txt: Added.
* platform/gtk/editing/selection/selection-display-flex-expected.png: Added.
* platform/gtk/editing/selection/selection-display-flex-expected.txt: Added.

Canonical link: https://commits.webkit.org/225117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262049 268f45cc-cd09-0410-ab3c-d52691b4dbfc